# 3d_engine_demo

./: Cargo.toml  README.md  wire_world.txt
src/: automata.rs  camera.rs  camera_controller.rs  depth_texture.rs  light.rs  main.rs  mesh.rs  mesh_object.rs  shader.wgsl  state.rs  texture.rs  vertex.rs
src/camera/: controller.rs  mod.rs
src/examples/: cgol.rs  life3d.rs  mod.rs  rain.rs  sbd.rs  wave.rs  wire_world.rs  wire_world.txt
src/lib/: automata.rs  light.rs  mod.rs  shader.wgsl  state.rs
src/lib/camera/: controller.rs  mod.rs
src/lib/entities/: mod.rs  placeholder_entity.rs
src/lib/mesh/: mod.rs
src/lib/mesh/objects/: cube.rs  light_point.rs  mod.rs
src/lib/objects/: cube.rs  gap.rs  mod.rs
src/lib/tiles/: cube.rs  gap.rs  mod.rs
src/lib/world/: drawable.rs  entity.rs  mod.rs  tile.rs
src/mesh/: mod.rs
src/mesh/objects/: cube.rs  mod.rs
