[package]
name = "block_engine_wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.26"
wgpu = "0.13"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
pollster = "0.2"
common_macros = "0.1.1"

[[bin]]
name = "block_engine_wgpu"
path = "src/main.rs"

[lib]
name = "block_engine_wgpu"
path = "src/lib/mod.rs"